data/derived/comb/progs/unify/prog5725.ml.out
Characters 91-108:
  | Sine (e1) -> sin (exprToString e1);;
                     ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
